--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "knex": "^2.4.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5"
   },
