--- a/server/.env.template
+++ b/server/.env.template
@@ -7,7 +7,7 @@ PG_PASS='postgres'
 PG_DB='react_auth_example'
 
 # GOOGLE
-GOOGLE_ClIENT_ID=''
+GOOGLE_CLIENT_ID=''
 GOOGLE_CLIENT_SECRET=''
 
 # Replace session secret with your own random string!
