--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
-{
+{ 
   "name": "react-express-auth-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "npm i && npm run migrate:rollback && npm run migrate && npm run seed",
     "start": "node ./index.js",
