--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.1.9",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
