--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "name": "react-express-auth-template",
   "version": "1.0.0",
   "description": "",
@@ -24,6 +24,7 @@
     "connect-session-knex": "^3.0.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
@@ -32,7 +33,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "uploadthing": "^6.10.4"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
