--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.11.2",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "uploadthing": "^6.10.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
