--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@uploadthing/react": "^6.5.4",
     "dayjs": "^1.11.11",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.4",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.11.2",
     "react-transition-group": "^4.4.5",
+    "react-use-measure": "^2.1.1",
     "uploadthing": "^6.10.4"
   },
   "devDependencies": {
