--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/html": "^2.2.2",
+    "@material-tailwind/react": "^2.1.9",
+    "@tailwindcss/forms": "^0.5.7",
     "@uploadthing/react": "^6.5.4",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.4",
