--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@tailwindcss/forms": "^0.5.7",
     "@uploadthing/react": "^6.5.4",
     "dayjs": "^1.11.11",
@@ -24,6 +28,7 @@
     "react-router-dom": "^6.11.2",
     "react-transition-group": "^4.4.5",
     "react-use-measure": "^2.1.1",
+    "styled-components": "^6.1.11",
     "uploadthing": "^6.10.4"
   },
   "devDependencies": {
