--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5"
-  }
+  "license": "ISC"
 }
