--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "react-transition-group": "^4.4.5",
     "react-use-measure": "^2.1.1",
     "styled-components": "^6.1.11",
-    "uploadthing": "^6.10.4"
+    "uploadthing": "^6.10.4",
+    "vite": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -42,7 +43,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^4.3.2"
+    "tailwindcss": "^3.4.3"
   }
 }
