--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,13 +29,12 @@
     "react-transition-group": "^4.4.5",
     "react-use-measure": "^2.1.1",
     "styled-components": "^6.1.11",
-    "uploadthing": "^6.10.4",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.2"
+    "uploadthing": "^6.10.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -43,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite": "^4.3.2"
   }
 }
